--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Andrew Spiers: Black Hole and Gravitational Wave Researcher: Homepage
+description: I am a PhD scientist at the University of Southampton, soon to graduate and begin a Research Associate position at the University of Nottingham.
